--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  @apply bg-zinc-900 text-gray-50;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  /* max-width: 1400px;
+  width: 100%;
+  margin: auto; */
+
+  @apply max-w-5xl w-full m-auto;
 }
